# delicat

./: README.md
delicat/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in  delicat-opt.c  delicat-opt.def  delicat-opt.h  delicat.1  delicat.c  delicat.lsm.in  delicat.spec.in  manpage.tpl  system.h  updater  xmalloc.c
delicat/autom4te.cache/: output.0  requests  traces.0  traces.1
